<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/scanFragment">

    <fragment
        android:id="@+id/accountRegisterFragment"
        android:name="com.smartsense.app.ui.account.AccountRegisterFragment"
        android:label="@string/nav_account"
        tools:layout="@layout/fragment_account_register">

        <action
            android:id="@+id/action_register_to_signIn"
            app:destination="@id/accountSignInFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/accountSignInFragment"
        android:name="com.smartsense.app.ui.account.AccountSignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_account_signin">
        <action
            android:id="@+id/action_signIn_to_register"
            app:destination="@id/accountRegisterFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/accountSensorsFragment"
        android:name="com.smartsense.app.ui.account.AccountSensorsFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account_sensors">
    </fragment>

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.smartsense.app.ui.scan.ScanFragment"
        android:label="@string/nav_scan"
        tools:layout="@layout/fragment_scan">

        <action
            android:id="@+id/action_scan_to_sensorDetail"
            app:destination="@id/sensorDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/settingsAppearanceFragment"
        android:name="com.smartsense.app.ui.settings.SettingsAppearanceFragment"
        android:label="@string/setting_appearance"
        tools:layout="@layout/fragment_settings_appearance" />

    <fragment
        android:id="@+id/settingsGeneralFragment"
        android:name="com.smartsense.app.ui.settings.SettingsGeneralFragment"
        android:label="@string/setting_general"
        tools:layout="@layout/fragment_settings_general" />

    <fragment
        android:id="@+id/settingsFeaturesFragment"
        android:name="com.smartsense.app.ui.settings.SettingsFeaturesFragment"
        android:label="@string/setting_features"
        tools:layout="@layout/fragment_settings_features" />

    <fragment
        android:id="@+id/sensorDetailFragment"
        android:name="com.smartsense.app.ui.detail.SensorDetailFragment"
        android:label="@string/tank_level"
        tools:layout="@layout/fragment_sensor_detail">

        <argument
            android:name="sensorAddress"
            app:argType="string"/>
        <action
            android:id="@+id/action_sensorDetail_to_tankSettings"
            app:destination="@id/tankSettingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/tankSettingsFragment"
        android:name="com.smartsense.app.ui.detail.TankSettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_tank_settings">

        <argument
            android:name="sensorAddress"
            app:argType="string"/>
    </fragment>
</navigation>
