<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="40dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:padding="@dimen/spacing_md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">
        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="?attr/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Confirm Email -->
        <LinearLayout
            android:layout_marginTop="@dimen/spacing_sm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_email"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmEmail"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_sm"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Confirm Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_sm"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Forget All Devices -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_xl"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:textSize="16sp"
            style="@style/Widget.Material3.Button"
            android:text="@string/register"/>

        <!-- Signed in user -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_md"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_a_user"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:textColor="?attr/colorOnSurface"
                android:padding="4dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
